# rag7

./: .env.example  .env.prod.example  .env.staging.example  .gitignore  .ragamuffin-version  ARCHITECTURE.md  CONTRIBUTING.md  DASHBOARD_GUIDE.md  DEPLOYMENT_CHECKLIST.md  DEVELOPMENT.md  Dockerfile  ENTERPRISE_FEATURES.md  ENTERPRISE_SETUP.md  FLOATING_BOT_GUIDE.md  GUI_TESTING_GUIDE.md  IMPLEMENTATION_SUMMARY.md  LICENSE  MOCKUP_GUIDE.md  Makefile  PLATFORM_FEATURES.md  PRODUCTION.md  PROJECT_SUMMARY.md  PR_BODY.md  PR_DESCRIPTION.md  QUICKSTART.md  README.md  README_MONOREPO.md  RUN_COMMANDS.md  SECURITY.md  TROUBLESHOOTING.md  USAGE.md  VERIFICATION.md  alembic.ini  candidate-create.patch  config.py  config.yaml  deploy-staging.sh  docker-compose.prod.yml  docker-compose.staging.yml  docker-compose.test.yml  (+25 more)
.github/: CODEOWNERS  dependabot.yml
.github/agents/: my-agent.agent.md
.github/workflows/: cd-staging.yml  chaos-testing.yml  ci-build-test.yml  ci-cd.yml  ci.yml  deploy-cloud-run.yml  deploy-gke.yml  deploy-staging.yml  deploy-vertex-ai.yml  docker-build-push.yml  model-cost-report.yml  security.yml
README/: DEVNOTES.md
agent/: Dockerfile  agent.py
agent/k8s/: agent-deployment.yaml
agents/: __init__.py  base.py
agents/fusion/: __init__.py  layer.py
agents/gpt4/: __init__.py  agent.py
api/: .gitignore  Dockerfile  requirements.txt
api/config/: asgi.py  settings.py  urls.py  wsgi.py
api/hr/: __init__.py  admin.py  models.py  views.py
backend/: .env.example  Dockerfile  README.md  alembic.ini  app.py  main.py  requirements.txt
backend/alembic/: env.py  script.py.mako
backend/api/: body_mapping.py  garment_processor.py  virtual_tryon.py
backend/app/: __init__.py  core.py  main.py
backend/config/: settings.py  urls.py
backend/hr/: admin.py  models.py  serializers.py  urls.py  views.py
backend/hr_system/: asgi.py  settings.py  urls.py  wsgi.py
backend/tests/: __init__.py  conftest.py  test_ack_flow.py  test_api.py  test_auth.py  test_tasks.py
candidates/: admin.py  models.py  views.py
candidates/migrations/: 0001_initial.py
config/: settings.py  urls.py
dashboard/: README.md  index.html  index.jsx  package.json
dashboard/src/: App.jsx  styles.css
deploy/terraform/: README.md  backend.tf  main.tf  outputs.tf  variables.tf
deploy/vertex-ai/: agent-config.yaml  deploy.sh
docs/: API_REFERENCE.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPMENT.md  SCALING.md  STRIPE_FIREBASE_INTEGRATION.md  architecture.md  deployment.md  integrations.md  langgraph_guide.md  n8n_guide.md  observability.md  patterns.md  runbook.md
examples/: README.md  api_client.py  basic_query.py  multi_llm_fusion.py
examples/notebooks/: 01_getting_started.ipynb  02_rag_operations.ipynb  03_advanced_rag.ipynb  requirements.txt
frontend/: .env.example  .eslintrc.json  Dockerfile  README.md  README_DOCKER.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  App.jsx  ChatInterface.css  ChatInterface.js  ChatInterface.test.js  Dashboard.css  Dashboard.js  Dashboard.test.js  FloatingBot.css  FloatingBot.js  FloatingBot.test.js  api.js  index.css
functions/: README.md
functions/stripe-webhooks/: index.js
integration/: __init__.py
integration/api/: Dockerfile  __init__.py  requirements.txt  routes.py  server.py
integration/webhooks/: __init__.py  handlers.py
k8s/: hpa.yaml  langgraph-deployment.yaml  orchestrator-deployment.yaml
langflow/: Dockerfile  README.md
langflow-backend/: Dockerfile  README.md  requirements-dev.txt  requirements.txt
langflow-backend/app/: __init__.py  auth.py  main.py  metrics.py  middleware.py  models.py  requirements.txt  retell.py
langflow-backend/flows/: .gitkeep
langflow-backend/tests/: conftest.py  test_auth.py  test_main.py  test_models.py  test_rag.py
langgraph/: Dockerfile  README.md  __init__.py  config.py  main.py
langgraph/agents/: __init__.py  aggregator_agent.py  base_agent.py  researcher_agent.py  reviewer_agent.py  router_agent.py  writer_agent.py
langgraph/graphs/: __init__.py  aggregator_graph.py  hierarchical_graph.py  loop_graph.py  network_graph.py  parallel_graph.py  router_graph.py  sequential_graph.py
langgraph/state/: __init__.py  agent_state.py
langgraph/tools/: __init__.py  shared_tools.py
migrations/: env.py
migrations/versions/: 20241219_1800_001_initial_schema.py
monitoring/: README.md  prometheus-config.yml
monitoring/grafana/: grafana.ini
monitoring/grafana-dashboards/: agent-overview.json  llm-costs.json  system-health.json
monitoring/prometheus/: alert_rules.yml  prometheus.yml
n8n/: README.md
n8n-workflows/: README.md  document-ingestion.json  rag-query-pipeline.json  scheduled-embeddings.json
n8n/credentials/: credentials_template.json
n8n/workflows/: approval_workflow.json  data_pipeline.json  langgraph_trigger.json  main_orchestrator.json  parallel_processor.json
orchestrator/: Dockerfile  README.md  main.py  openapi.yaml  requirements.txt  secrets.py  tls_config.py  ws.py
orchestrator/ui/: control.html
postgres/init/: 01_schema.sql  02_seed.sql
rabbitmq/: definitions.json  rabbitmq.conf
rag-service/: Dockerfile  README.md  requirements-dev.txt  requirements.txt
rag-service/app/: __init__.py  chunking.py  hybrid_search.py  main.py  metrics.py  reranking.py
rag-service/tests/: __init__.py  conftest.py  test_chunking.py  test_hybrid_search.py  test_main.py  test_reranking.py
rag7/: __init__.py
rag7/agents/: __init__.py
rag7/api/: __init__.py
rag7/config/: __init__.py
rag7/fusion/: __init__.py
scripts/: generate_cost_report.py  smoke.sh
sdk/: README.md
src/: App.jsx  __init__.py  config.py  main.py
tests/: __init__.py  conftest.py  test_auth.py  test_config.py  test_fusion.py  test_fusion_layer.py  test_gpt4_agent.py  test_integrations.py  test_models.py  test_monitoring.py  test_web_api.py
traefik/: traefik.yml
web-client/: .gitignore  Dockerfile  README.md  index.html  nginx.conf  package.json  vite.config.ts  vitest.config.ts
(+159 files in other folders)
